# tactile-odometry-drone

./: .gitignore  .gitmodules  Dockerfile  README.md  controller.devel.dockerfile  controller_entrypoint.sh  docker-compose.yaml  dockerize.sh  entrypoint.sh  trackball_and_imu.devel.dockerfile  trackball_and_imu_entrypoint.sh
offboard/install/: local_setup.sh  setup.sh
offboard/install/rviz_vis/share/ament_index/resource_index/package_run_dependencies/: rviz_vis
offboard/install/rviz_vis/share/ament_index/resource_index/parent_prefix_path/: rviz_vis
offboard/install/rviz_vis/share/rviz_vis/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
offboard/install/rviz_vis/share/rviz_vis/cmake/: rviz_visConfig-version.cmake  rviz_visConfig.cmake
offboard/install/rviz_vis/share/rviz_vis/environment/: ament_prefix_path.dsv  path.dsv
offboard/install/rviz_vis/share/rviz_vis/launch/: vis_joint_publisher.launch.py
offboard/install/rviz_vis/share/rviz_vis/meshes/: Link1.dae  Link2.dae  SensorizedBase.STL  SensorizedBottom.STL  SensorizedMiddle.STL  TactileMappingDroneBase.dae  round-top.STL  round-top.dae  top.STL
offboard/install/rviz_vis/share/rviz_vis/rviz/: rviz_basic_settings.rviz
offboard/install/rviz_vis/share/rviz_vis/urdf/: tactile-odom-drone.urdf
offboard/log/: latest_build
offboard/src/rviz_vis/: CMakeLists.txt
offboard/src/rviz_vis/config/: params.yaml
offboard/src/rviz_vis/launch/: vis_joint_publisher.launch.py
offboard/src/rviz_vis/meshes/: Link1.dae
offboard/src/rviz_vis/rviz/: rviz_basic_settings.rviz
offboard/src/rviz_vis/urdf/: tactile-odom-drone.urdf
offboard/src/simulation/: CMakeLists.txt  package.xml
offboard/src/simulation/include/simulation/: fake_jointstate_publisher.hpp  mocap_forwarder.hpp  mocap_pub.hpp
offboard/src/simulation/launch/: gz_ros_bridge.launch.py  sim.launch.py
offboard/src/simulation/src/: fake_jointstate_publisher.cpp  mocap_forwarder.cpp  mocap_pub.cpp
onboard/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
onboard/install/estimators/lib/estimators/: force_estimator
onboard/install/estimators/share/ament_index/resource_index/parent_prefix_path/: estimators
onboard/install/estimators/share/estimators/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
onboard/log/: latest_build
onboard/src/controllers/: CMakeLists.txt  package.xml
onboard/src/controllers/include/controllers/: controller.hpp  rectangle_planer.hpp  ref_pos_repeater.hpp  test_trajectory.hpp
onboard/src/controllers/src/: controller.cpp  rectangle_planer.cpp  ref_pos_repeater.cpp  test_trajectory.cpp
onboard/src/estimators/: CMakeLists.txt  package.xml
onboard/src/estimators/include/estimators/: force_estimator.hpp  onboard_pose_estimate_repeater.hpp
onboard/src/estimators/src/: force_estimator.cpp  onboard_pose_estimate_repeater.cpp
onboard/src/kinematics/: CMakeLists.txt  package.xml
onboard/src/kinematics/include/kinematics/: constants.hpp  kinematics.hpp
onboard/src/kinematics/src/: kinematics.cpp
onboard/src/odometry_filter/: CMakeLists.txt  package.xml
onboard/src/odometry_filter/include/odometry_filter/: odometry_filter.hpp
onboard/src/odometry_filter/src/: main.cpp  odometry_filter.cpp
onboard/src/planners/: CMakeLists.txt  package.xml
onboard/src/planners/config/: circle_params.yaml  line_params.yaml  rectangle_params.yaml  sin_params.yaml  zero_params.yaml
onboard/src/planners/include/planners/: blind_circle.hpp  blind_line.hpp  blind_planner.hpp  blind_sine.hpp  circle_planner.hpp  line_planner.hpp  planner.hpp  rectangle_planer.hpp  rectangle_planner.hpp  sin_planner.hpp  test_trajectory.hpp  zero_planner.hpp
onboard/src/planners/launch/: blind_planner.launch.py  planner.launch.py
onboard/src/planners/src/: blind_circle.cpp  blind_line.cpp  blind_planner.cpp  blind_sine.cpp  circle_planer.cpp  circle_planner.cpp  line_planer.cpp  line_planner.cpp  planner.cpp  rectangle_planner.cpp  ref_pos_repeater.cpp  sin_planer.cpp  sin_planner.cpp  test_trajectory.cpp  zero_planner.cpp
onboard/src/std_msgs_stamped/: CMakeLists.txt  package.xml
onboard/src/trackball_interface/: CMakeLists.txt  package.xml  readme.md
onboard/src/trackball_interface/launch/: launch_trackball_imu.py
onboard/src/trackball_interface/src/: main.cpp
